--- a/Stress/public/options.html
+++ b/Stress/public/options.html
@@ -275,9 +275,10 @@ $(document).ready(function(){
     var output4 = "";
     var output5 = "";
     var counter = 0;
+    for (var j = 5; j > 1; j--)
     for (var i = 0; i < 100; i++) {
       var works = false;
-      if (helpers[i][2] == zipcode.substring(0, 4))
+      if (zipcode.substring(0,j) == helpers[i][2].substring(0,j))
       if (helpers[i][4] == stress || helpers[i][5] == stress || helpers[i][6]==stress)
         if(helpers[i][3] == preference || preference == "Either")
         {
